<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            app:title="@string/action_settings">

        <EditTextPreference
                app:key="api_key"
                app:title="@string/api_key_text"
                android:hint="@string/api_key_example_hint"
                app:useSimpleSummaryProvider="true"
                app:dialogTitle="@string/dialog_api_key_title"/>

        <EditTextPreference
                app:key="sd_url"
                app:title="@string/sd_url_text"
                android:hint="@string/sd_url_hint"
                app:useSimpleSummaryProvider="true"
                app:dialogTitle="@string/dialog_api_key_title"/>
        <SwitchPreference
                app:key="newestOrder"
                app:title="Order from earliest to latest"
                app:defaultValue="true"
            />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>